--- a/index.html
+++ b/index.html
@@ -2,52 +2,56 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hospital Eustaquio Aristizabal</title>
 
 	<!-- BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-
-	<!-- CSS General -->
-	<link rel="stylesheet" href="./css/general.css" />
+	  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 	<!-- FAVICON -->
-	<link rel="icon" href="img/favicon32x32.ico" type="image/x-icon">
+	<link rel="icon" href="/img/icono_navegador.ico" type="image/x-icon">
 
+	<!-- CSS General -->
+	<link rel="stylesheet" href="/css/general.css">
+	<link rel="stylesheet" href="/css/inicio.css">
 </head>
 
 <body>
 	<header class="encabezado">
 		<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-			<div class="container-fluid bg-transparent">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-					aria-label="Toggle navigation">
+			<div class="container-fluid bg-transparent navbar_general">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+				  aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
 					<ul class="navbar-nav text-center nav-pills">
 						<li class="nav-item">
 							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
-								href="../index.html">Inicio</a>
+							  href="../index.html"><box-icon name='home-alt-2'></box-icon> Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html">CAPS</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html"><box-icon type='solid'
+								  name='institution'></box-icon> CAPS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/turnero.html">Sacar turno</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/turnero.html"><box-icon
+								  name='receipt'></box-icon> Sacar turno</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html"><box-icon
+								  name='book-content'></box-icon> Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html"><box-icon
+								  name='universal-access'></box-icon> Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html"><box-icon
+								  name='message-dots'></box-icon> Contacto</a>
 						</li>
 					</ul>
 				</div>
@@ -55,17 +59,16 @@
 		</nav>
 	</header>
 
-	<main>
-		<section>
-			<div>
-				<h1>Actualidad</h1>
-			</div>
-			<!--Bloque 1-->
-			<div class="bloque  parallax cover-1">
+	<main class="contenedor">
+		<section class="estructura_contenido">
 
+			<h1>Actualidad</h1>
+
+			<!--Bloque 1-->
+			<div class="bloque parallax cover-1">
 			</div>
-			<h2>General Piran</h2>
-			<div>
+			<article class="contenido_inicio">
+				<h2 class="tit_inicio">General Pirán</h2>
 				<p>El gobernador de la provincia de Buenos Aires, Axel Kicillof, el intendente del Partido de
 					Mar Chiquita, Walter Wischnivetzky y el ministro de Salud, Nicolás Kreplak procederán a la
 					inauguración de la ampliación del Centro de Atención Primaria de la Salud (CAPS) de General
@@ -86,14 +89,12 @@
 					internación aumentaría en 6 camas su capacidad, pudiendo tener una habitación exclusiva
 					destinada para internación pediátrica y una destinada para obstetricia.
 				</p>
-			</div>
+			</article>
 
 			<!--Bloque 2-->
-			<div class="bloque  parallax cover-2">
-
-			</div>
-			<h2>Coronel Vidal</h2>
-			<div>
+			<div class="bloque  parallax cover-2"></div>
+			<article class="contenido_inicio">
+				<h2 class="tit_inicio">Coronel Vidal</h2>
 				<p>Con la participación del intendente del Partido de Mar Chiquita, Jorge Paredi, y la titular de
 					PAMI,
 					Luana Volnovich, quedó inaugurada una Sala de Tomografía en el Hospital Municipal “Eustaquio
@@ -109,14 +110,12 @@
 					conjunto
 					con PAMI. Agradecemos a Volnovich y al director de la UGL, Fernando Mogni, por la gestión de los
 					últimos</p>
-			</div>
+			</article>
 
 			<!--Bloque 3-->
-			<div class="bloque parallax cover-3">
-
-			</div>
-			<h2>Historia</h2>
-			<div>
+			<div class="bloque parallax cover-3"></div>
+			<article class="contenido_inicio">
+				<h2 class="tit_inicio">Historia</h2>
 				<p>El Hospital Municipal “Eustaquio Aristizábal, a partir de una donación de Micaela U. de
 					Aristizábal y en conjunto con el Municipio mediante el aporte del terreno, la financiación y
 					dirección de parte
@@ -140,14 +139,14 @@
 					instalación de nuevos equipos y nuevas dependencias que hoy brindan un
 					servicio valioso a todo el Partido de Mar Chiquita.
 				</p>
-			</div>
-			<div class="bloque parallax cover-4">
+			</article>
+			<div class="bloque parallax cover-4"></div>
 
-			</div>
+
 		</section>
 	</main>
 	<footer class="pie_pagina">
-		<p>NodeJS &copy Codo a Codo 2024</p>
+		<p>NodeJS || Grupo 2 - Codo a Codo 2024</p>
 	</footer>
 
 	<!-- ICONOS -->
@@ -158,10 +157,8 @@
 
 	<!-- BOOTSTRAP -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
-
-	<!-- JS -->
+	  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+	  crossorigin="anonymous"></script>
 </body>
 
 </html>
