--- a/pages/turnero.html
+++ b/pages/turnero.html
@@ -2,19 +2,22 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Turnero - Hospital Eustaquio Aristizabal</title>
 
 	<!-- BOOTSTRAP -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-	  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+	  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="/img/icono_navegador.ico" type="image/x-icon">
 
 	<!-- CSS General -->
-	<link rel="stylesheet" href="/css/general.css" />
+	<link rel="stylesheet" href="/css/general.css">
 	<!-- CSS propio de la página -->
-	<link rel="stylesheet" href="/css/turnero.css" />
+	<link rel="stylesheet" href="/css/turnero.css">
 </head>
 
 <body>
@@ -28,23 +31,23 @@
 				<div class="collapse navbar-collapse bg-transparent" id="navbarNavDropdown">
 					<ul class="navbar-nav text-center nav-pills">
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase activo" aria-current="page"
-								href="/index.html">Inicio</a>
+							<a class="nav-link enlaces text-uppercase" aria-current="page" href="../index.html"><box-icon name='home-alt-2'></box-icon> Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/caps.html">CAPS</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/caps.html"><box-icon type='solid'
+								  name='institution'></box-icon> CAPS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/turnero.html">Sacar turno</a>
+							<a class="nav-link enlaces text-uppercase activo" href="/pages/turnero.html"><box-icon name='receipt'></box-icon> Sacar turno</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/agenda.html">Agenda turnos</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/agenda.html"><box-icon name='book-content'></box-icon> Agenda turnos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/personal.html">Personal Médico</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/personal.html"><box-icon name='universal-access'></box-icon> Personal Médico</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link enlaces text-uppercase" href="./pages/contacto.html">Contacto</a>
+							<a class="nav-link enlaces text-uppercase" href="/pages/contacto.html"><box-icon name='message-dots'></box-icon> Contacto</a>
 						</li>
 					</ul>
 				</div>
@@ -57,21 +60,21 @@
 			<h1>Solicitar turno</h1>
 			<article class="inputs">
 				<div class="mb-3">
-					<label for="medico" class="form-label">Médico</label>
+					<label for="medico" class="form-label">Médicos</label>
 					<select name="listaMedico" id="listaMedico" class="form-select">
 						<option value="">Seleccione un médico</option>
 					</select>
 				</div>
 				<div class="mb-3">
 					<label for="mes" class="form-label">Seleccionar mes</label>
-					<input type="month" name="mes" id="mes" class="form-control" />
+					<input type="month" name="mes" id="mes" class="form-control">
 				</div>
 			</article>
 
-			<hr />
+			<hr>
 
 			<article class="calendario" id="calendario">
-				<span class="tit_calendario">Seleccionar día</span>
+				<h2 class="tit_calendario">Seleccionar día</h2>
 				<div class="bloque_fecha" id="bloque_fecha">
 					<section class="dias_semana" id="dias_semana">
 						<span>Lunes</span>
@@ -88,7 +91,7 @@
 		</section>
 	</main>
 	<footer class="pie_pagina">
-		<p>NodeJS &copy Codo a Codo 2024</p>
+		<p>NodeJS || Grupo 2 - Codo a Codo 2024</p>
 	</footer>
 
 	<!-- ICONOS -->
